commiting inital base react-app, updated .gitignore for JS env, webpack setup for dev and building, scss setup, linter and babel files, and a new java controller

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,12 @@
     <title>Homepage</title>
 </head>
 <body>
-<h1>Does this work?!</h1>
+<p>index.html of webpack export would replace this index.html file</p>
+<p>work still needs to be done to serve these "production" (static) files</p>
+<p>front-end should still be able to develop independently as we solve this</p>
+<p>webpack can be configured to spit out the build files into resources/templates</p>
+<p>or, we can figure out how to point spring to something like "front-end/serve</p>
+<p>front-end/build is currently being ignored as webpack will continue to generate build files</p>
+<p>more details in git commit for branch: development/initial-react-app</p>
 </body>
 </html>
