--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <meta charset="UTF-8">
-    <title>Homepage</title>
-</head>
-<body>
-<p>index.html of webpack export would replace this index.html file</p>
-<p>work still needs to be done to serve these "production" (static) files</p>
-<p>front-end should still be able to develop independently as we solve this</p>
-<p>webpack can be configured to spit out the build files into resources/templates</p>
-<p>or, we can figure out how to point spring to something like "front-end/serve</p>
-<p>front-end/build is currently being ignored as webpack will continue to generate build files</p>
-<p>more details in git commit for branch: development/initial-react-app</p>
-</body>
+    <title></title>
+  <link href="main.82a9a6ba102c00d4d593.css" rel="stylesheet"></head>
+  <body>
+  <script type="text/javascript" src="main.82a9a6ba102c00d4d593.js"></script></body>
 </html>
