integrated redux into app

--- a/front-end/style/base.scss
+++ b/front-end/style/base.scss
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: $color-accent;
+  background-color: $color-primary;
   font-family: $proxima;
   color: $color-secondary;
 }
