--- a/front-end/style/variables.scss
+++ b/front-end/style/variables.scss
@@ -1,6 +1,8 @@
-$color-primary: #808080;
-$color-secondary: #ea402c;
-$color-accent: #ffffff;
+$color-primary: #ffffff;
+$color-secondary: #80aed0;
+$color-tertiary: #febc5b;
+$color-quaternary: #ff5757;
+$color-accent: #808080;
 $roboto: 'Roboto', sans-serif;
 $proxima: 'Proxima_Nova', sans-serif;
 $buttonHoverBackground: #ff6982;
