--- a/front-end/style/variables.scss
+++ b/front-end/style/variables.scss
@@ -1,7 +1,7 @@
 $color-primary: #ffffff;
 $color-secondary: #80aed0;
 $color-tertiary: #febc5b;
-$color-quaternary: #ff5757;
+$color-quaternary: #FF5757;
 $color-accent: #808080;
 $roboto: 'Roboto', sans-serif;
 $proxima: 'Proxima_Nova', sans-serif;
