--- a/front-end/style/variables.scss
+++ b/front-end/style/variables.scss
@@ -5,4 +5,5 @@ $color-quaternary: #FF5757;
 $color-accent: #808080;
 $roboto: 'Roboto', sans-serif;
 $proxima: 'Proxima_Nova', sans-serif;
+$josefinsans: 'Josefin Sans', sans-serif;
 $buttonHoverBackground: #ff6982;
