Updated landing page

--- a/front-end/src/components/landing/landing.scss
+++ b/front-end/src/components/landing/landing.scss
@@ -1,10 +1,23 @@
-.landing-image {
-  background: url('../../../assets/landing_image.jpg') no-repeat center;
-  background-size: contain;
-  width: 100;
-  height: 50vw;
-  min-height: 100%;
-  border: 1px solid black;
+@import '../../../style/variables.scss';
+
+.intro-text {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  font-size: 20px;
+}
+
+.intro-text p {
+  width: 80%;
+  font-size: 30px;
+}
+
+.underline {
+  width: 70vw;
+  border-bottom: 2px solid $color-tertiary;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
 
 Link a {
@@ -13,6 +26,7 @@ Link a {
   margin: 0 auto;
   color: $color-primary;
 }
+
 p {
   color: $color-primary;
 }
@@ -21,4 +35,12 @@ p {
   color: $color-secondary;
   margin-top: 40px;
   text-align: center;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 600px){
+  .intro-text p {
+    width: 80%;
+    font-size: 20px;
+    font-weight: normal;
+  }
 }
