--- a/front-end/src/components/nav-ui/nav-ui.scss
+++ b/front-end/src/components/nav-ui/nav-ui.scss
@@ -1,7 +1,6 @@
 @import '../../../style/variables';
 
 #navControl {
-  padding: 5px 5px 5px 5px;
   background: $color-quaternary;
 }
 
@@ -15,4 +14,13 @@
   float: right;
   margin: 30px 20px 5px 5px;
   padding: 0px;
+  color: $color-septenary;
+}
+
+#navControl .navLink:hover {
+  color: $color-primary;
+}
+
+#navControl .navLink:active {
+  color: $color-secondary;
 }
