--- a/front-end/style/variables.scss
+++ b/front-end/style/variables.scss
@@ -1,9 +1,13 @@
 $color-primary: #ffffff;
-$color-secondary: #80aed0;
+$color-secondary: #24B4D6;
 $color-tertiary: #febc5b;
 $color-quaternary: #FF5757;
+$color-quinary: #FA9958;
+$color-senary: #3891A6;
+$color-septenary: #494848;
 $color-accent: #808080;
 $roboto: 'Roboto', sans-serif;
 $proxima: 'Proxima_Nova', sans-serif;
 $josefinsans: 'Josefin Sans', sans-serif;
+$raleway: 'Raleway',Raleways-serif;
 $buttonHoverBackground: #ff6982;
