Updated build files

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title></title>
-  <link href="main.c3754b62ca94245cbe17.css" rel="stylesheet"></head>
+    <title>Seattle Voluntech</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="main.070e38785d020b090d3f.css" rel="stylesheet">
+  </head>
   <body>
-  <script type="text/javascript" src="main.c3754b62ca94245cbe17.js"></script></body>
+  <script type="text/javascript" src="main.070e38785d020b090d3f.js"></script></body>
 </html>
