--- a/front-end/src/components/landing/landingImage.scss
+++ b/front-end/src/components/landing/landingImage.scss
@@ -1,5 +1,29 @@
 @import '../../../style/variables.scss';
 
+.barChart-image {
+  width: 340px;
+  height: 374px;
+}
+
+.keyboard-image {
+  width: 300px;
+  height: 300px;
+}
+
+.infoTextVolunteer {
+  text-align: center;
+  position: absolute;
+  padding: 0;
+  margin-top: 2%;
+}
+
+.infoTextBusiness {
+  text-align: center;
+  position: absolute;
+  padding: 0;
+  margin-top: 2%;
+}
+
 .landing-image {
   background: url('../../../assets/landing_image.jpg') no-repeat content-box;
   background-size: 100% 100%;
@@ -14,7 +38,7 @@
 }
 
 .intro-title {
-  margin: 0px;
+  margin: 0;
   font-size: 35px;
   color: $color-primary;
   text-align: center;
@@ -23,7 +47,7 @@
 .intro-title h1 {
   font-weight: 100;
   text-shadow: 3px 3px 0px $color-senary;
-  margin-top: 0;
+  margin: 0;
   padding-top: 30px;
   font-family: $raleway;
   width: 100%;
@@ -34,7 +58,7 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  margin-top: 15%;
+  margin-top: 5%;
 }
 
 .intro-headline p {
@@ -102,7 +126,7 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    margin-top: 3%;
+    margin: 0;
   }
 
   .intro-headline p {
@@ -133,7 +157,7 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    margin-top: 3%;
+    margin: 0;
   }
 }
 
