--- a/front-end/src/components/landing/landingImage.scss
+++ b/front-end/src/components/landing/landingImage.scss
@@ -6,11 +6,12 @@
 }
 
 .keyboard-image {
-  width: 300px;
-  height: 300px;
+  width: 250px;
+  height: 250px;
 }
 
 .infoTextVolunteer {
+  color: white;
   text-align: center;
   position: absolute;
   padding: 0;
@@ -18,6 +19,7 @@
 }
 
 .infoTextBusiness {
+  color: white;
   text-align: center;
   position: absolute;
   padding: 0;
@@ -25,16 +27,23 @@
 }
 
 .landing-image {
-  background: url('../../../assets/landing_image.jpg') no-repeat content-box;
+  // background: url('../../../assets/landing_image.jpg') no-repeat content-box;
+  background-color: $color-secondary;
   background-size: 100% 100%;
   width: 100%;
   height: 50vw;
 }
 
 .overlay {
-  background-color: $color-septenary;
-  opacity: 0.95;
-  height: inherit;
+  //background-color: $color-septenary;
+  //opacity: 0.95;
+  //height: inherit;
+}
+
+.siteTitle {
+  // top, right, bottom, left
+  margin: 20px auto 0 auto;
+  display: block;
 }
 
 .intro-title {
