added project cards

--- a/front-end/src/components/open-projects/open-projects.scss
+++ b/front-end/src/components/open-projects/open-projects.scss
@@ -2,5 +2,12 @@
 
 .projectListHeader {
   color: #F3F3F3;
-  font-size: 50px;
+  font-size: 35px;
 }
+
+.projects {
+  text-shadow: 3px 3px 0 $color-accent;
+  margin: 20px;
+}
+
+
