--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,10 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Seattle Voluntech</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="main.070e38785d020b090d3f.css" rel="stylesheet">
-  </head>
+    <title></title>
+  <link href="main.17b022c5543fe555f7d2.css" rel="stylesheet"></head>
   <body>
-  <script type="text/javascript" src="main.070e38785d020b090d3f.js"></script></body>
+  <script type="text/javascript" src="main.17b022c5543fe555f7d2.js"></script></body>
 </html>
