Updated nav bar

--- a/front-end/style/base.scss
+++ b/front-end/style/base.scss
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: $color-secondary;
+  background-color: $color-primary;
   font-family: $josefinsans;
   color: $color-secondary;
   margin: 0;
