--- a/front-end/src/components/nav-ui/nav-ui.scss
+++ b/front-end/src/components/nav-ui/nav-ui.scss
@@ -1,7 +1,24 @@
 @import '../../../style/variables';
 
+.loginSetNavigation {
+  color: black;
+  display: flex;
+  flex-wrap: nowrap;
+  width: 100%;
+  height: 75px;
+}
+
+.loginSetNavigation p {
+  color: black;
+}
+
+.logo {
+  display: flex;
+  margin: 0 650px 0 0;
+}
+
 #navControl {
-  background: $color-quaternary;
+  background: $color-primary;
 }
 
 .navUILogo {
@@ -14,7 +31,6 @@
   height: 25px;
   width: 25px;
 }
-
 
 #navControl .navLink {
   float: right;
