--- a/front-end/src/components/landing/landingImage.scss
+++ b/front-end/src/components/landing/landingImage.scss
@@ -27,76 +27,47 @@
 }
 
 .landing-image {
-  background: url('../../../assets/handshake.jpg') no-repeat content-box;
-  background-size: 100% 100%;
+  background: url('../../../assets/landingimage.svg') no-repeat content-box;
+  background-size: cover;
   width: 100%;
   max-height: 28vw;
-}
-
-.overlay {
-  background-color: $color-septenary;
-  opacity: 0.85;
-  height: 28vw;
+  padding: 75px 0 0 0;
 }
 
 .siteTitle {
   // top, right, bottom, left
-  margin: 0 auto 0 auto;
+  margin: 0 auto 5% auto;
   display: block;
   text-align: center;
   padding: 100px 0 0 0;
   color: $color-primary;
-  font-size: 50px;
-  text-shadow: 5px 5px black;
+  font-size: 60px;
+  text-shadow: 3px 3px $color-quaternary;
+  opacity: 1;
 }
 
-.intro-title {
-  margin: 0;
-  font-size: 35px;
-  color: $color-primary;
+.intro-text {
   text-align: center;
-}
-
-.intro-title h1 {
-  font-weight: 100;
-  text-shadow: 3px 3px 0px $color-senary;
-  margin: 0;
-  padding-top: 30px;
-  font-family: $raleway;
-  width: 100%;
-  font-size: 40px;
-}
-
-.intro-headline {
   display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  margin-top: 5%;
-}
-
-.intro-headline p {
+  justify-content: center;
+  margin-top: 50px;
   font-size: 20px;
-  width: 40%;
-  font-family: $raleway;
+  animation: fade-in 1.5s linear;
 }
 
-.intro-headline p:first-of-type {
-  animation: example 3s, slide-in 2s;
+.intro-text p {
+  // border-radius: 25px;
+  margin-top: 0;
+  margin-bottom: 0;
+  width: 50%;
+  font-size: 25px;
+  text-shadow: 2px 2px $color-accent;
+  opacity: 1;
 }
 
-.intro-body p:first-of-type {
-    color: $color-quinary;
-}
-
-.intro-headline p:last-of-type {
-  color: $color-secondary;
-  opacity: 0;
-  animation: example 2s linear 1s forwards, slide-in 2s 0.5s;
-}
-
-@keyframes example {
-  0% {opacity: 0; left: -100px}
-  100% {opacity: 1; left: 0;}
+@keyframes fade-in {
+  0% {opacity: 0; }
+  100% {opacity: 1; }
 }
 
 @keyframes slide-in {
@@ -120,8 +91,10 @@
     padding: 2%;
   }
 
-  .arrow-wrapper svg {
-    margin-top: 2vw;
+  .intro-text p {
+    width: 80%;
+    font-size: 20px;
+    font-weight: normal;
   }
 }
 
