--- a/front-end/style/variables.scss
+++ b/front-end/style/variables.scss
@@ -6,6 +6,11 @@ $color-quinary: #FA9958;
 $color-senary: #3891A6;
 $color-septenary: #494848;
 $color-accent: #808080;
+$color-octonary: #000000;
+$color-nonary: #0e5791;
+$color-denary: #333333;
+$color-eleven: #f6f6f6;
+$color-twelve: #5C5C5C;
 $roboto: 'Roboto', sans-serif;
 $proxima: 'Proxima_Nova', sans-serif;
 $josefinsans: 'Josefin Sans', sans-serif;
