--- a/front-end/style/base.scss
+++ b/front-end/style/base.scss
@@ -1,7 +1,7 @@
 @import "variables";
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans|Raleway');
 @font-face {
-  //font-family: 'Josefin Sans', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   font-family: 'Raleway', sans-serif;
   //src: url("../assets/proxima_nova_reg.ttf");
 }
