--- a/front-end/style/variables.scss
+++ b/front-end/style/variables.scss
@@ -1,5 +1,5 @@
 $color-primary: #ffffff;
-$color-secondary: #24B4D6;
+$color-secondary: #cd2323;
 $color-tertiary: #febc5b;
 $color-quaternary: #FF5757;
 $color-quinary: #FA9958;
