--- a/front-end/style/base.scss
+++ b/front-end/style/base.scss
@@ -10,7 +10,9 @@ body {
   background-color: $color-primary;
   font-family: $raleway;
   color: $color-secondary;
+  height: 100vh;
   margin: 0;
+  min-height: 100vh;
 }
 
 button:hover {
@@ -26,7 +28,9 @@ h1 {
 html {
   overflow-y: scroll;
   scroll-behavior: smooth;
+  height: 100vh;
 }
+
 .logo {
   margin:50px auto;
   width: 250px;
@@ -37,7 +41,7 @@ a {
   text-decoration: none;
 }
 a:visited {
-  color: $color-secondary;
+  color: $color-nonary;
 }
 
 .centered {
@@ -54,4 +58,12 @@ a:visited {
   height: 1px;
   background-color: $color-septenary;
   color: $color-septenary;
+}
+
+footer {
+  width: 100%;
+  height: 50px;
+  background-color: $color-quaternary;
+  bottom: 0;
+  color: $color-octonary;
 }
