Added class names to project-info component and updated general styling

--- a/front-end/src/components/about-us/about-us.scss
+++ b/front-end/src/components/about-us/about-us.scss
@@ -7,8 +7,9 @@
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
-  padding-top: 75px;
+  top: 75px;
   height: auto;
+  position: relative;
 }
 
 .header-styles {
