--- a/front-end/src/components/nav-ui/nav-ui.scss
+++ b/front-end/src/components/nav-ui/nav-ui.scss
@@ -57,7 +57,7 @@
   float: right;
   margin: 25px 20px 5px 5px;
   padding: 0px;
-  color: $color-secondary;
+  color: $color-quaternary;
   font-weight: 600;
 }
 
