--- a/front-end/style/variables.scss
+++ b/front-end/style/variables.scss
@@ -11,6 +11,7 @@ $color-nonary: #0e5791;
 $color-denary: #333333;
 $color-eleven: #f6f6f6;
 $color-twelve: #5C5C5C;
+$color-thirteen: #dfdfdf;
 $roboto: 'Roboto', sans-serif;
 $proxima: 'Proxima_Nova', sans-serif;
 $josefinsans: 'Josefin Sans', sans-serif;
