--- a/front-end/src/components/landing/landing.scss
+++ b/front-end/src/components/landing/landing.scss
@@ -7,10 +7,6 @@ Link a {
   color: $color-primary;
 }
 
-p {
-  color: $color-primary;
-}
-
 .formHeader {
   color: $color-secondary;
   margin-top: 40px;
@@ -23,36 +19,40 @@ p {
   font-weight: bold;
 }
 
-.business {
+.business, .volunteer {
   width: 40%;
   margin: 50px 0 0 0;
   text-align: center;
   animation: fade-in 2s linear;
-}
-
-.signup-business {
-  background-color: #0052c8;
-}
-
-.volunteer {
-  width: 40%;
-  margin: 50px 0 0 0;
-  text-align: center;
-  animation: fade-in 2s linear;
-}
-
-.volunteer p, .business p {
   color: $color-denary;
 }
 
-.signup-volunteer {
-  background-color: $color-secondary;
+.signup-business {
+  color: #0052c8;
+  font-size: 14px;
+
 }
 
-.business p, .volunteer p {
+.signup-business:hover {
+  box-shadow: 0px 1px 15px 2px #0052c8;
+  color: #0052c8;
+}
+
+.signup-volunteer {
+  color: $color-secondary;
+  font-size: 14px;
+}
+
+.signup-volunteer:hover {
+  box-shadow: 0px 1px 15px 2px $color-secondary;
+  color: $color-secondary;
+}
+
+.business > p, .volunteer > p {
   width: 60%;
   margin-left: 20%;
   margin-right: auto;
+  color: $color-denary;
 }
 
 @keyframes fade-in {
@@ -81,8 +81,8 @@ p {
   text-align: center;
   display: flex;
   justify-content: center;
-  margin: 95px 0 0 0;
-  background: rgba(0, 0, 0, 0.5);
+  margin: 85px 0 0 0;
+  background: rgba(0, 0, 0, 0.6);
   flex-wrap: wrap;
   padding: 20px 0 20px 0;
 }
