--- a/front-end/src/components/project-details/project-details.scss
+++ b/front-end/src/components/project-details/project-details.scss
@@ -4,15 +4,11 @@
   width: 80%;
   top: 100px;
   position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 20px;
-  border: 1px solid $color-thirteen;
+  margin: 0 auto 0 auto;
+  padding: 20px 20px 60px 20px;
+  //border: 1px solid $color-thirteen;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-}
-
-.project-details > div {
-  padding: 20px;
+  min-height: 74.5vh;
 }
