Updated button styling

--- a/front-end/src/components/dashboard/profile.scss
+++ b/front-end/src/components/dashboard/profile.scss
@@ -26,6 +26,7 @@
 .profile-projects > button {
   align-self: center;
   margin: 50px 0 50px 0;
+  border: 1px solid $color-octonary;
 }
 
 .open-projects, .closed-projects, .current-projects {
