--- a/front-end/src/components/project-details/project-info.scss
+++ b/front-end/src/components/project-details/project-info.scss
@@ -7,6 +7,8 @@
 
 .project-info > div {
   padding: 20px;
+  box-shadow: 2px 2px 2px 2px $color-senary;
+  border-radius: 5px;
 }
 
 .project-container {
