--- a/front-end/src/components/project-details/project-info.scss
+++ b/front-end/src/components/project-details/project-info.scss
@@ -1,24 +1,36 @@
 @import '../../../style/variables';
 
 .project-info {
-  height: 60vh;
-  justify-content: space-between;
+  min-height: 65vh;
+  justify-content: space-around;
+  width: 100%;
+  padding: 0px 30px 20px 30px;
+  font-size: 15px;
+  margin: 0 0 20px 0;
 }
 
 .project-info > div {
-  padding: 20px;
-  box-shadow: 2px 2px 2px 2px $color-senary;
+  padding: 0px 20px 20px 20px;
+  box-shadow: 2px 2px 2px 2px rgba(56, 145, 166, 0.75);
   border-radius: 5px;
+  margin: 10px;
 }
 
-.project-container {
-  width: 55%;
+.project-wrapper {
+  flex: 1 1;
   border: 1px solid $color-thirteen;
+  background-color: $color-primary;
 }
 
-.business-container {
-  //width: 50%;
+.business-wrapper {
   border: 1px solid $color-thirteen;
-  flex: 0 0 35%;
-  //max-width: 40%;
+  flex: 0 1 30%;
+  background-color: $color-primary;
+}
+
+.project-buttons > button {
+  align-self: center;
+  background-color: $color-quaternary;
+  color: $color-primary;
+  font-size: 16px;
 }
