--- a/front-end/style/base.scss
+++ b/front-end/style/base.scss
@@ -97,6 +97,65 @@ a:visited {
   margin: 0;
 }
 
+.form {
+  padding-top: 100px;
+  overflow: visible;
+  flex: 1;
+  margin: auto;
+  padding-bottom: 60px;
+}
+
+.form-container {
+  width: 60vw;
+  flex-flow: row wrap;
+  justify-content: center;
+  border: 1px solid $color-accent;
+  border-radius: 10px;
+}
+
+.form-container > h2, h3 {
+  width: 100%;
+  text-align: center;
+}
+
+.form-container > h2 {
+  background-color: $color-quaternary;
+  margin: 0;
+  padding: 18px 0 18px 0;
+  border-radius: 10px 10px 0 0;
+  color: $color-primary;
+}
+
+input[type='text'], input[type='email'], input[type='url'], textarea {
+  font-family: $raleway;
+  width: 100%;
+}
+
+.form-edit-fields {
+  flex-flow: column wrap;
+  margin: 20px 0 0 0;
+  width: 80%;
+  justify-content: center;
+  font-weight: bold;
+}
+
+.form-edit-fields > label {
+  padding: 1em 0 1em 0;
+}
+
+.form-edit-fields button {
+  width: 80px;
+  background-color: $color-quaternary;
+  margin: 20px 0 20px 0;
+  font-size: 16px;
+  color: $color-primary;
+  align-self: center;
+}
+
+.invalid-feedback {
+  color: red;
+}
+
 footer {
   width: 100%;
   height: 50px;
