Removed unneeded fields

--- a/front-end/src/components/project-details/project-info.scss
+++ b/front-end/src/components/project-details/project-info.scss
@@ -3,7 +3,7 @@
 .project-info {
   min-height: 65vh;
   justify-content: space-around;
-  width: 100%;
+  width: 95%;
   padding: 0px 30px 20px 30px;
   font-size: 15px;
   margin: 0 0 20px 0;
@@ -33,4 +33,5 @@
   background-color: $color-quaternary;
   color: $color-primary;
   font-size: 16px;
+  width: 190px;
 }
