Updated project card styling

--- a/front-end/src/components/open-projects/project-card.scss
+++ b/front-end/src/components/open-projects/project-card.scss
@@ -12,8 +12,8 @@
 
 .aProject h2 {
   font-size: 25px;
-  margin: 0 0 20px 0;
-  padding: 10px;
+  margin: 0 0 0 0;
+  padding: 20px 0 0 0;
 }
 
 .aProject h3 {
