Updates to About Us, Project Details, and Dashboard (#88)
* Added footer to About Us page

* Refactored redundant code in nav ui

* Added project details route

* Added new text to landing page

* Refactored project card as a separate component

* Added class names to project-info component and updated general styling

* Add window reload to trigger Auth0

* Added config to add default title and responsive meta tag to index.html

* Added method to force reload browser to trigger login

* Added callback and dashboard edit routes

* Added profile input fields and form component

* Moved nav bar to app.js

* Refactored project detail component to business and volunteer views

* Updated text content on landing page and general styling

* Updated base styling

* Added profile component

* Added conditional rendering for profile form fields based on user type

* Changed svg fill color to prevent blending with white background

* Moved footer to app.js and added logout route

* Add redirect to dashboard on profile form submission

* Changed About Us component to functional component

* Replaced remaining elements in project pane with project card components

* Added new profile form, business and volunteer profile edit forms

* Removed form component

* Abstracted Posed button into its own component

* Updated button styling

* Added project editing and new project form routes

* Moved profile forms to profile form folder

* Moved profile component to its own folder

* Updated styling to make footer stay at bottom of window

* Added form component for creating new projects

* Added sign up and edit project buttons to project info component

* Renamed existingSite to businessSite

* Updated input labels

* Added general form styling

* Removed unneeded fields

* Removed unnecessary statements

* Moved sign up button to ProjectInfo component

* Added links to edit project and create project buttons


--- a/front-end/src/components/about-us/about-us.scss
+++ b/front-end/src/components/about-us/about-us.scss
@@ -1,18 +1,32 @@
+.about-us-container {
+  flex: 1;
+  margin-top: auto;
+  min-height: 92.75vh;
+}
+
+.about-us {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  top: 75px;
+  height: auto;
+  position: relative;
+}
+
 .header-styles {
   color: black;
   font-size: large;
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  width: 100%;
+  text-align: center;
+  height: 50px;
+  align-self: flex-start;
 }
 
 .about-style-container {
   width: 70%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  align-self: center;
+  top: 30%;
 }
 
 .about-styles {
