--- a/front-end/src/components/footer/footer.scss
+++ b/front-end/src/components/footer/footer.scss
@@ -1,14 +1,13 @@
 @import '../../../style/variables.scss';
 
 .footer {
-  width: 100%;
-  height: 50px;
-  background-color: $color-quaternary;
-  bottom: 0;
-  color: $color-octonary;
   text-align: center;
   display: flex;
   justify-content: space-around;
+  margin: 0;
+  flex-shrink: 0;
+  bottom: 0;
+  position: absolute;
 }
 
 .footer-container {
