--- a/front-end/src/components/nav-ui/nav-ui.scss
+++ b/front-end/src/components/nav-ui/nav-ui.scss
@@ -10,10 +10,6 @@
   font-size: 20px;
 }
 
-.loginSetNavigation p {
-  color: $color-octonary;
-}
-
 .logo {
   display: flex;
   margin: 0;
@@ -35,7 +31,7 @@
   background: $color-primary;
   position: fixed;
   width: 100%;
-  box-shadow: 0 1px $color-accent;
+  box-shadow: 0 3px 5px $color-accent;
 }
 
 .navUILogo {
@@ -57,7 +53,7 @@
   float: right;
   margin: 25px 20px 5px 5px;
   padding: 0px;
-  color: $color-secondary;
+  color: $color-quaternary;
   font-weight: 600;
 }
 
