--- a/front-end/style/base.scss
+++ b/front-end/style/base.scss
@@ -10,11 +10,42 @@ body {
   background-color: $color-primary;
   font-family: $raleway;
   color: $color-secondary;
+  height: 100%;
   margin: 0;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+}
+
+.main-container {
+  min-height: 100vh;
+  flex: 1 0 auto;
+  //overflow: scroll;
+  position: relative;
+  //padding-bottom: 50px;
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+}
+
+button {
+  width: 170px;
+  height: 40px;
+  background-color: $color-primary;
+  border-radius: 10px;
+  font-weight: bold;
 }
 
 button:hover {
   cursor: pointer;
+}
+
+button:disabled {
+  background-color: #dddddd;
+  color: #666666;
 }
 
 h1 {
@@ -24,9 +55,15 @@ h1 {
 }
 
 html {
-  overflow-y: scroll;
+  //overflow-y: scroll;
   scroll-behavior: smooth;
+  height: 100vh;
 }
+
+p {
+  color: $color-octonary;
+}
+
 .logo {
   margin:50px auto;
   width: 250px;
@@ -37,7 +74,7 @@ a {
   text-decoration: none;
 }
 a:visited {
-  color: $color-secondary;
+  color: #551A8B;
 }
 
 .centered {
@@ -45,13 +82,84 @@ a:visited {
   margin: 0 auto;
 }
 
-.error {
-  color: red;
-}
-
 .underline {
   width: 10%;
   height: 1px;
   background-color: $color-septenary;
   color: $color-septenary;
+}
+
+.header-underline {
+  width: 100%;
+  height: 1px;
+  background-color: $color-septenary;
+  color: $color-septenary;
+  margin: 0;
+}
+
+.form {
+  padding-top: 100px;
+  overflow: visible;
+  flex: 1;
+  margin: auto;
+  padding-bottom: 60px;
+}
+
+.form-container {
+  width: 60vw;
+  flex-flow: row wrap;
+  justify-content: center;
+  border: 1px solid $color-accent;
+  border-radius: 10px;
+}
+
+.form-container > h2, h3 {
+  width: 100%;
+  text-align: center;
+}
+
+.form-container > h2 {
+  background-color: $color-quaternary;
+  margin: 0;
+  padding: 18px 0 18px 0;
+  border-radius: 10px 10px 0 0;
+  color: $color-primary;
+}
+
+input[type='text'], input[type='email'], input[type='url'], textarea {
+  font-family: $raleway;
+  width: 100%;
+}
+
+.form-edit-fields {
+  flex-flow: column wrap;
+  margin: 20px 0 0 0;
+  width: 80%;
+  justify-content: center;
+  font-weight: bold;
+}
+
+.form-edit-fields > label {
+  padding: 1em 0 1em 0;
+}
+
+.form-edit-fields button {
+  width: 80px;
+  background-color: $color-quaternary;
+  margin: 20px 0 20px 0;
+  font-size: 16px;
+  color: $color-primary;
+  align-self: center;
+}
+
+.invalid-feedback {
+  color: red;
+}
+
+footer {
+  width: 100%;
+  height: 50px;
+  background-color: $color-quaternary;
+  bottom: 0;
+  color: $color-octonary;
 }
